structur added & styled

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <html>
   <head>
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div>
+      <input name="" id="text-top" cols="30" rows="2" /> <br />
+      <input name="" id="text-bottom" cols="30" rows="2" />
+    </div>
+    <div>
+      <input type="file" id="img" accept="image" />
+    </div>
+    <div>
+      <button id="generate">create meme</button>
+    </div>
+    <div>
+      <canvas id="meme"></canvas>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
