--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
   <head>
     <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div>
-      <input name="" id="text-top" cols="30" rows="2" /> <br />
+      <input name="" id="text-top" cols="30" rows="2" />
+      textSize:
+      <input id="top-size" type="range" min="0.01" max="0.3" step="0.03" value="0.1" />
+      <br />
       <input name="" id="text-bottom" cols="30" rows="2" />
+      textSize:
+      <input id="bottom-size" type="range" min="0.01" max="0.3" step="0.03" value="0.2" />
     </div>
     <div>
       <input type="file" id="img" accept="image" />
