--- a/index.html
+++ b/index.html
@@ -35,14 +35,11 @@
       <button id="generate">create meme</button>
     </div>
     <div>
-      <button id="convert">Convert to image</button>
+      <button id="convert">download meme</button>
     </div>
     <div>
-      <canvas id="meme"></canvas>
-    </div>
-    <div>
-      <p id="preview"></p>
       <p id="result"></p>
+      <canvas id="meme"></canvas>
     </div>
     <script
       type="text/javascript"
